# usc-interaction-software.iteam-assessment

algorithm_design/: readme
algorithm_design/include/algorithm_design/: gaussian_pdf.h  matrix.h
algorithm_design/src/: gaussian_pdf.cpp  matrix.cpp
basic_ros_concepts/: readme
basic_ros_concepts/nodes/: CMakeLists.txt  controller_node.cpp
coding_style/: readme
coding_style/include/coding_style/: example_type.h
coding_style/src/: example_type.cpp
data_structure_design/: CMakeLists.txt  readme
data_structure_design/exe/: test_linked_list.cpp
data_structure_design/include/data_structure_design/: linked_list.h  linked_list_node.h
data_structure_design/src/: linked_list.cpp  linked_list_node.cpp
debian_packaging/: readme
debian_packaging/probabilistics/: CMakeLists.txt  Makefile
debian_packaging/probabilistics/include/interaction/probabilistics/: cdf_wrapped_normal.h  truncated_normal.h  unsigned_normal.h
debian_packaging/probabilistics/src/: CMakeLists.txt  cdf_truncated_normal.cpp  pdf_wrapped_normal.cpp
debian_packaging/scripts/: Makefile
debian_packaging/scripts/bash/: interaction-init-changelog  interaction-make-deb
distributed_system_debugging/: CMakeLists.txt  manifest.xml  readme
distributed_system_debugging/launch/: simple_system.launch
distributed_system_design/: readme
external_apis/: readme
runtime_errors/: CMakeLists.txt  readme
runtime_errors/exe/: print_landmarks.cpp
runtime_errors/include/runtime_errors/: landmark.h
runtime_errors/src/: CMakeLists.txt  landmark.cpp
software_testing/: readme
software_testing/basic_ros_concepts/: mainpage.dox
software_testing/basic_ros_concepts/nodes/: driver_node.cpp
software_testing/probabilistics/include/interaction/: probabilistics.h
software_testing/probabilistics/include/interaction/probabilistics/: pdf_wrapped_normal.h  von_mises.h  wrapped_normal.h
software_testing/probabilistics/pkgconfig/: interaction-probabilistics.pc.in
software_testing/probabilistics/src/: cdf_unsigned_normal.cpp  cdf_von_mises.cpp  cdf_wrapped_normal.cpp  pdf_truncated_normal.cpp  pdf_unsigned_normal.cpp  pdf_von_mises.cpp
syntax_errors/: CMakeLists.txt  Makefile  readme
syntax_errors/exe/: matrix_addition.cpp
syntax_errors/include/syntax_errors/: matrix.h
syntax_errors/src/: matrix.cpp
templating/: readme
